--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -170,11 +170,14 @@
     <ClCompile Include="Game_Screen.cpp" />
     <ClCompile Include="Game_StaticObject.cpp" />
     <ClCompile Include="Game_Terrain.cpp" />
+    <ClCompile Include="Game_TestBox.cpp" />
     <ClCompile Include="Game_Water.cpp" />
     <ClCompile Include="Goomba.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mapper.cpp" />
     <ClCompile Include="Mario.cpp" />
     <ClCompile Include="Obj_ContraBot.cpp" />
+    <ClCompile Include="Obj_SmartBot.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Portal.cpp" />
@@ -222,11 +225,14 @@
     <ClInclude Include="Game_Screen.h" />
     <ClInclude Include="Game_StaticObject.h" />
     <ClInclude Include="Game_Terrain.h" />
+    <ClInclude Include="Game_TestBox.h" />
     <ClInclude Include="Game_Water.h" />
     <ClInclude Include="Goomba.h" />
     <ClInclude Include="KeyEventHandler.h" />
+    <ClInclude Include="Mapper.h" />
     <ClInclude Include="Mario.h" />
     <ClInclude Include="Obj_ContraBot.h" />
+    <ClInclude Include="Obj_SmartBot.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Portal.h" />
