--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Game_Blocker.cpp" />
+    <ClCompile Include="Game_Bullet.cpp" />
     <ClCompile Include="Game_Character.cpp" />
     <ClCompile Include="Game_Collision.cpp" />
     <ClCompile Include="Game_Enemy.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mapper.cpp" />
     <ClCompile Include="Mario.cpp" />
+    <ClCompile Include="Obj_Bullet_Rifle.cpp" />
     <ClCompile Include="Obj_ContraBot.cpp" />
     <ClCompile Include="Obj_SmartBot.cpp" />
     <ClCompile Include="Platform.cpp" />
@@ -214,6 +216,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Game_Blocker.h" />
+    <ClInclude Include="Game_Bullet.h" />
     <ClInclude Include="Game_Character.h" />
     <ClInclude Include="Game_Collision.h" />
     <ClInclude Include="Game_Enemy.h" />
@@ -232,6 +235,7 @@
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mapper.h" />
     <ClInclude Include="Mario.h" />
+    <ClInclude Include="Obj_Bullet_Rifle.h" />
     <ClInclude Include="Obj_ContraBot.h" />
     <ClInclude Include="Obj_SmartBot.h" />
     <ClInclude Include="Platform.h" />
