--- a/Contra/05-SceneManager.vcxproj.filters
+++ b/Contra/05-SceneManager.vcxproj.filters
@@ -142,6 +142,13 @@
     <ClCompile Include="Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game_MovableEnemy.cpp" />
+    <ClCompile Include="Game_StationEnemy.cpp" />
+    <ClCompile Include="Enemy_Sniper.cpp" />
+    <ClCompile Include="Enemy_RedGunner.cpp" />
+    <ClCompile Include="Enemy_SneakSniper.cpp" />
+    <ClCompile Include="Enemy_ScubaDriver.cpp" />
+    <ClCompile Include="Enemy_Turret.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -303,9 +310,17 @@
     <ClInclude Include="Enemies_ID.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Game_MovableEnemy.h" />
+    <ClInclude Include="Game_StationEnemy.h" />
+    <ClInclude Include="Enemy_Sniper.h" />
+    <ClInclude Include="Enemy_RedGunner.h" />
+    <ClInclude Include="Enemy_SneakSniper.h" />
+    <ClInclude Include="Enemy_ScubaDriver.h" />
+    <ClInclude Include="Enemy_Turret.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="brick.txt">
