Add State_Die, State_Station.

--- a/Contra/05-SceneManager.vcxproj.filters
+++ b/Contra/05-SceneManager.vcxproj.filters
@@ -151,6 +151,15 @@
     <ClCompile Include="Obj_Bullet_Rifle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="State_Station.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="State_Station_Hide.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="State_Contra_Die.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -319,6 +328,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game_StationEnemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="State_Station.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="State_Station_Hide.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="State_Contra_Die.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
