--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -191,11 +191,14 @@
     <ClCompile Include="Sprites.cpp" />
     <ClCompile Include="State_Base.cpp" />
     <ClCompile Include="State_Contra_Base.cpp" />
+    <ClCompile Include="State_Contra_Die.cpp" />
     <ClCompile Include="State_Contra_Fall.cpp" />
     <ClCompile Include="State_Contra_Idle.cpp" />
     <ClCompile Include="State_Contra_Jump.cpp" />
     <ClCompile Include="State_Contra_Swim.cpp" />
     <ClCompile Include="State_Contra_Walk.cpp" />
+    <ClCompile Include="State_Station.cpp" />
+    <ClCompile Include="State_Station_Hide.cpp" />
     <ClCompile Include="Textures.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
@@ -248,11 +251,14 @@
     <ClInclude Include="Sprites.h" />
     <ClInclude Include="State_Base.h" />
     <ClInclude Include="State_Contra_Base.h" />
+    <ClInclude Include="State_Contra_Die.h" />
     <ClInclude Include="State_Contra_Fall.h" />
     <ClInclude Include="State_Contra_Idle.h" />
     <ClInclude Include="State_Contra_Jump.h" />
     <ClInclude Include="State_Contra_Swim.h" />
     <ClInclude Include="State_Contra_Walk.h" />
+    <ClInclude Include="State_Station.h" />
+    <ClInclude Include="State_Station_Hide.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Textures.h" />
     <ClInclude Include="Utils.h" />
