--- a/Contra/05-SceneManager.vcxproj.filters
+++ b/Contra/05-SceneManager.vcxproj.filters
@@ -160,6 +160,7 @@
     <ClCompile Include="State_Contra_Die.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Equip_GunBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -339,6 +340,7 @@
     <ClInclude Include="State_Contra_Die.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Equip_GunBase.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
