--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Enemy_Sniper.cpp" />
     <ClCompile Include="Enemy_Turret.cpp" />
     <ClCompile Include="Equip_GunBase.cpp" />
+    <ClCompile Include="Equip_Gun_N.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Game_Blocker.cpp" />
     <ClCompile Include="Game_Bullet.cpp" />
@@ -180,7 +181,7 @@
     <ClCompile Include="Game_Water.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mapper.cpp" />
-    <ClCompile Include="Obj_Bullet_Rifle.cpp" />
+    <ClCompile Include="Obj_Bullet_N.cpp" />
     <ClCompile Include="Obj_ContraBot.cpp" />
     <ClCompile Include="Obj_SmartBot.cpp" />
     <ClCompile Include="PlayScene.cpp" />
@@ -219,6 +220,7 @@
     <ClInclude Include="Enemy_Sniper.h" />
     <ClInclude Include="Enemy_Turret.h" />
     <ClInclude Include="Equip_GunBase.h" />
+    <ClInclude Include="Equip_Gun_N.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Game_Blocker.h" />
     <ClInclude Include="Game_Bullet.h" />
@@ -240,7 +242,7 @@
     <ClInclude Include="Game_Water.h" />
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mapper.h" />
-    <ClInclude Include="Obj_Bullet_Rifle.h" />
+    <ClInclude Include="Obj_Bullet_N.h" />
     <ClInclude Include="Obj_ContraBot.h" />
     <ClInclude Include="Obj_SmartBot.h" />
     <ClInclude Include="PlayScene.h" />
@@ -277,6 +279,7 @@
     <Text Include="CONTRA_BULLET.txt" />
     <Text Include="goomba.txt" />
     <Text Include="INFARY.txt" />
+    <Text Include="map_stage_1.txt" />
     <Text Include="mario-sample.txt" />
     <Text Include="scene0005.txt" />
     <Text Include="scene01.txt" />
